# cmall_server

./: .env  Cargo.toml  LICENSE  commandline.txt  docker.learn  test.rest
cmall_core/: Cargo.toml
cmall_core/fixtures/: private.pem  public.pem
cmall_core/src/: lib.rs
cmall_core/src/middleware/: auth.rs  mod.rs
cmall_core/src/models/: mod.rs  role.rs  user.rs
cmall_core/src/utils/: jwt.rs
cmall_service/: Cargo.toml  service.yml  tutorial1.xlsx  user.xlsx
cmall_service/fixtures/: test.sql  users.csv
cmall_service/src/: config.rs  error.rs  lib.rs  main.rs  serde_error.rs
cmall_service/src/error/: app_error.rs  mod.rs  user_error.rs
cmall_service/src/handler/: auth.rs  mod.rs  role.rs  user.rs
cmall_service/src/models/: mod.rs  role.rs  user.rs  user_model.rs
cmall_service/src/router/: base.rs  mod.rs  role.rs  user.rs
migrations/: 20241231090050_initial.sql
