[workspace]
members = ["cmall_core", "cmall_service"]

resolver = "2"


[workspace.dependencies]
anyhow = "1.0.95"
axum = { version = "0.7.9", features = [
    "http2",
    "multipart",
    "tracing",
    "query",
] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
jwt-simple = "0.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "cors",
    "fs",
    "trace",
] }

uuid = { version = "1.11.0", features = ["v7", "serde"] }
rust_xlsxwriter = { version = "0.80.0", features = ["serde", "chrono"] }


# custom crate
cmall_core = { path = "./cmall_core" }
cmall_service = { path = "./cmall_service" }
