[package]
name = "cmall_service"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# custom crate
cmall_core = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
http-body-util = { version = "0.1.2", optional = true }
sqlx-db-tester = { version = "0.5.0", optional = true }


[dev-dependencies]
cmall_service = { workspace = true, features = ["test-util"] }
